Fixed z-index for app

--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -18,7 +18,6 @@
 .card-image {
   @apply relative top-0 left-0 h-0 w-full overflow-hidden;
   padding-bottom: 100%;
-  z-index: -1;
 
   & img {
     @apply absolute top-0 left-0 w-full h-full object-cover object-center;
